2017年10月28日提交

--- a/less/mainpage.less
+++ b/less/mainpage.less
@@ -1,10 +1,16 @@
 .recentDaily{
   margin-top: 20px;
   .block-content{
-    height: 100px;
+    .col-md-4 p{
+      min-height:100px;
+      max-height: 200px;
+        text-overflow: ellipsis;
+    }
       h3{
-        height: 30px;
+        font-size: 18px;
         background-color: #ececec;
+        height: 30px;
+        line-height: 31px;
         span{
           display: inline-block;
           width: 50px;
