--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -1,12 +1,16 @@
 .recentDaily {
   margin-top: 20px;
 }
-.recentDaily .block-content {
-  height: 100px;
+.recentDaily .block-content .col-md-4 p {
+  min-height: 100px;
+  max-height: 200px;
+  text-overflow: ellipsis;
 }
 .recentDaily .block-content h3 {
-  height: 30px;
+  font-size: 18px;
   background-color: #ececec;
+  height: 30px;
+  line-height: 31px;
 }
 .recentDaily .block-content h3 span {
   display: inline-block;
