--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -22,6 +22,13 @@
   margin-right: 5px;
   background-color: #3c3c3c;
 }
+.view-underling {
+  border-top: 2px solid #333333;
+  padding-top: 20px;
+}
+.vu-list {
+  margin-bottom: 10px;
+}
 @media screen and (max-width: 991px) {
   .recentDaily .block-content {
     height: auto;
