--- a/less/mainpage.less
+++ b/less/mainpage.less
@@ -24,6 +24,13 @@
       }
   }
 }
+.view-underling{
+  border-top: 2px solid #333333;
+  padding-top: 20px;
+}
+.vu-list{
+  margin-bottom: 10px;
+}
 
 @media screen and (max-width: 991px) {
   .recentDaily{
