--- a/less/mainpage.less
+++ b/less/mainpage.less
@@ -1,10 +1,9 @@
 .recentDaily{
   margin-top: 20px;
   .block-content{
-    .col-md-4 p{
-      min-height:100px;
-      max-height: 200px;
-        text-overflow: ellipsis;
+    .col-md-4 p:nth-child(2){
+      height:100px;
+      overflow-y: hidden;
     }
       h3{
         font-size: 18px;
